--- a/gssproxy.yaml
+++ b/gssproxy.yaml
@@ -1,4 +1,4 @@
-version_control: git
-src_repo: https://pagure.io/gssproxy.git
+version_control: github
+src_repo: gssapi/gssproxy
 tag_prefix: ^v
-seperator: .
+seperator: "."
